--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     .animate-glow {
       animation: glow 2s ease-in-out infinite;
     }
-    
+
 @media (max-width: 400px) {
   .calculator {
     transform: scale(0.9);
@@ -95,7 +95,7 @@
 
 <body class="bg-[url('images/mathematics-theme.jpg')]  font-family-[roboto_mono] ">
   <p class="text-6xl text-center font-bold text-[#ffffff]">calculator</p>
-  <div class="flex justify-center">
+  <div class="flex justify-center max-w-[95%] sm:max-w-[400px]">
     <div class="bg-[#ffffff] w-130 h-160 mt-10 mb-10 p-4 rounded-4xl  ">
       <div class="flex justify-center">
         <div
