--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="icon" type="image/png" href="images/s.png">
- 
+  <link rel="icon" type="image/png" href="images/s.png">
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-  <title>Online calculator</title>
+  <title>Online Calculator</title>
+
   <style>
-    
     @font-face {
       font-family: "roboto_mono";
       src: url(fonts/Roboto_Mono/RobotoMono-VariableFont_wght.ttf);
     }
 
+    /* === Animations === */
     @keyframes fade-in {
       from {
         opacity: 0;
@@ -48,7 +48,6 @@
     }
 
     @keyframes shake {
-
       0%,
       100% {
         transform: translateX(0);
@@ -83,63 +82,108 @@
       animation: glow 2s ease-in-out infinite;
     }
 
-@media (max-width: 400px) {
-  .calculator {
-    transform: scale(0.9);
-  }
-}
+    /* === Responsive Layout === */
+    @media (max-width: 640px) {
+      body {
+        background-size: cover;
+        padding: 10px;
+      }
 
+      p.text-6xl {
+        font-size: 2rem;
+      }
+
+      .calculator {
+        width: 100% !important;
+        max-width: 380px;
+        height: auto !important;
+        padding: 15px;
+        margin-top: 20px;
+      }
+
+      .display {
+        font-size: 1.4rem !important;
+        padding: 10px;
+        height: 60px;
+      }
+
+      button {
+        width: 70px !important;
+        height: 60px !important;
+        font-size: 1rem !important;
+      }
+
+      .buttons {
+        gap: 10px !important;
+      }
+    }
+
+    @media (max-width: 400px) {
+      .calculator {
+        transform: scale(0.9);
+      }
+
+      button {
+        width: 60px !important;
+        height: 55px !important;
+      }
+
+      p.text-6xl {
+        font-size: 1.8rem;
+      }
+    }
   </style>
-  <link rel="manifest" href="manifest.json">
 </head>
 
-<body class="bg-[url('images/mathematics-theme.jpg')]  font-family-[roboto_mono] ">
-  <p class="text-6xl text-center font-bold text-[#ffffff]">calculator</p>
-  <div class="flex justify-center max-w-[95%] sm:max-w-[400px]">
-    <div class="bg-[#ffffff] w-130 h-160 mt-10 mb-10 p-4 rounded-4xl  ">
-      <div class="flex justify-center">
-        <div
-          class="w-120 text-right bg-gray-800 text-white text-3xl p-4 rounded-lg mt-5 mb-10 h-15 overflow-x-auto whitespace-nowrap">
-          <p class="text-left"></p>
-          <p id="input"></p>
-        </div>
-      </div>
-      <div class="flex justify-between mb-4">
-        <button onclick="nose()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">7</button>
-        <button onclick="noei()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">8</button>
-        <button onclick="noni()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">9</button>
-        <button onclick="rem()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">AC</button>
-      </div>
-      <div class="flex justify-between mb-4">
-        <button onclick="nofo()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">4</button>
-        <button onclick="nofi()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">5</button>
-        <button onclick="nosi()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">6</button>
-        <button onclick="divide()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">➗</button>
-      </div>
-      <div class="flex justify-between mb-4">
-        <button onclick="noon()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">1</button>
-        <button onclick="notw()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">2</button>
-        <button onclick="noth()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">3</button>
-        <button onclick="multiply()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">✖</button>
-      </div>
-      <div class="flex justify-between mb-4">
-        <button onclick="noze()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">0</button>
-        <button onclick="decimal()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">.</button>
-        <button onclick="square()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">^</button>
-        <button onclick="add()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">+</button>
-      </div>
-      <div class="flex justify-between mb-4">
-        <button onclick="exponential()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold"></button>
-        <button onclick="del()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">DEL</button>
-        <button onclick="equal()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">=</button>
-        <button onclick="subtract()" class="w-30 h-20 bg-[#000000] rounded-4xl text-[#ffffff] font-bold">-</button>
+<body class="bg-[url('images/mathematics-theme.jpg')] font-family-[roboto_mono] flex flex-col items-center">
+  <p class="text-6xl text-center font-bold text-[#ffffff] animate-fade-in">Calculator</p>
 
+  <div class="calculator bg-[#ffffff] w-130 h-160 mt-10 mb-10 p-4 rounded-4xl shadow-lg animate-slide-up">
+    <div class="flex justify-center">
+      <div class="display w-120 text-right bg-gray-800 text-white text-3xl p-4 rounded-lg mt-5 mb-10 h-15 overflow-x-auto whitespace-nowrap">
+        <p id="input"></p>
+      </div>
+    </div>
+
+    <!-- Buttons -->
+    <div class="buttons flex flex-col gap-4">
+      <div class="flex justify-between">
+        <button onclick="nose()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">7</button>
+        <button onclick="noei()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">8</button>
+        <button onclick="noni()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">9</button>
+        <button onclick="rem()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">AC</button>
+      </div>
+
+      <div class="flex justify-between">
+        <button onclick="nofo()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">4</button>
+        <button onclick="nofi()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">5</button>
+        <button onclick="nosi()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">6</button>
+        <button onclick="divide()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">➗</button>
+      </div>
+
+      <div class="flex justify-between">
+        <button onclick="noon()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">1</button>
+        <button onclick="notw()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">2</button>
+        <button onclick="noth()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">3</button>
+        <button onclick="multiply()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">✖</button>
+      </div>
+
+      <div class="flex justify-between">
+        <button onclick="noze()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">0</button>
+        <button onclick="decimal()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">.</button>
+        <button onclick="square()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">^</button>
+        <button onclick="add()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">+</button>
+      </div>
+
+      <div class="flex justify-between">
+        <button onclick="exponential()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold"></button>
+        <button onclick="del()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">DEL</button>
+        <button onclick="equal()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">=</button>
+        <button onclick="subtract()" class="bg-[#000000] rounded-4xl text-[#ffffff] font-bold">-</button>
       </div>
     </div>
   </div>
-  <div id="funct">
 
-  </div>
   <script src="script.js"></script>
 </body>
 
