--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
 <body class="bg-[url('images/mathematics-theme.jpg')]  font-family-[roboto_mono] ">
   <p class="text-6xl text-center font-bold text-[#ffffff]">calculator</p>
-  <div class="flex justify-center max-w-[95%] sm:max-w-[400px]">
+  <div class="flex justify-center ">
     <div class="bg-[#ffffff] w-130 h-160 mt-10 mb-10 p-4 rounded-4xl  ">
       <div class="flex justify-center">
         <div
